# xbox-bootanim-decoder

./: .gitignore  LICENSE  README.md  pyproject.toml
src/xbox_bootanim/: __init__.py  cli.py
